--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "roam-research-mcp",
-  "version": "0.3.0",
+  "version": "0.6.1",
   "description": "A Model Context Protocol (MCP) server for Roam Research API integration",
   "private": false,
   "repository": {
@@ -15,7 +15,7 @@
     "model-context-protocol"
   ],
   "author": "Ian Shen / 2B3 PRODUCTIONS LLC",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/2b3pro/roam-research-mcp/issues"
   },
