feat: Enterprise環境向けstdio-only版に改変
- HTTP/SSE機能を完全削除（ポート8088/8087制限対応）
- 企業ファイアウォール問題を解決
- 技術的知見レポートを追加

Changes:
- src/server/roam-server.ts: HTTP関連コード削除
- src/config/environment.ts: ポート設定削除
- docs/enterprise_roam_mcp_findings.md: 技術レポート追加
- src/utils/net.ts: ファイル削除（不要）

Result: MCP統合成功、stdio-only動作確認済み

--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.13.2",
     "@roam-research/roam-api-sdk": "^0.10.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
